# autoreward

./: .gitattributes  AGENT_POLICY.md  CONNECT.md  CONTRIBUTING.md  DESCENT.md  DISCOVERY.md  INDEX.md  JACOBIAN-EXPLAINED.md  LICENSE  README.md  SCHEMA.md  __init__.py  descent.py  install.ps1  install.sh  optimizer.py  pyproject.toml  reward_vector.py  training-paradigms.md  use-cases.md
.github/workflows/: ci.yml
demos/: naive_metric_fooled.py
gauges/: by-goal.md
gauges/entries/: 3d-torso-surface.md  identity-match.md  match-target-image-perceptual.md  shot-match-to-target.md
gauges/examples/: 3d-torso-surface.json  identity-match.json  shot-match-to-target.json
hooks/: pre-commit
integrations/: autoresearch_bridge.py
models/: README.md  index.json
models/entries/: arcface.md  bertscore.md  clip.md  dreamsim.md  hpsv2.md  imagereward.md  laion-aesthetic.md  llm-as-judge.md  lpips.md  pickscore.md  rlhf-reward-model.md  vmaf.md
scripts/: build.py
tests/: test_descent_status.py
